--- a/Base/lib/Forming/FormGrid/style.css
+++ b/Base/lib/Forming/FormGrid/style.css
@@ -1,14 +1,7 @@
 .form-panel{
-    position: relative;
-    width: 100%;
+    position: relative;  width: 100%;
     display: flex; flex-direction: column; align-content: flex-start; justify-content: flex-start;
-    background-color: rgb(248, 248, 248);
     box-sizing: border-box;
-    margin: 0;
-    padding: 16px 16px 24px ;
-    border-radius: 2px;
-    position: relative;
-    box-shadow: 0px 0px 1px 1px #0002; 
     margin: 0 auto;
 }
 
